--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+    font-family: 'Kanit', serif;
 }
 
 /* navbar */
@@ -19,6 +19,9 @@ nav {
     box-shadow:0px 2px 10px #cecccc;
     
 }
+
+
+
 
 .logo-grid {
     
@@ -44,10 +47,7 @@ nav {
     
 }
 
-.add-custom:hover {
-    color: #ff9407;
-    margin-left: 1400px;
-}
+
 
 .ham-grid {
     grid-column: right;
@@ -63,6 +63,81 @@ nav {
     cursor: pointer;
     
 }
+
+/* in hamburger */
+
+.center-ham {
+
+    text-align: center;
+}
+
+.profile-icon {
+    padding: 1.5rem 0rem 0rem 0rem;
+    font-size: 65px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.ham-list p a:hover {
+    color: #F83C3C;
+    
+}
+.ham-list p a {
+    color: #000000;
+    font-size: 18px;
+    text-decoration: none;
+    cursor: pointer;
+    transition: color 0.3s ease;
+}
+
+.lineHr {
+    margin-left: auto;
+    margin-right: auto;
+    width: 260px;
+    height: 0;
+    border: 1px solid #000000;
+    
+}
+
+.btn-ham {
+    margin-bottom: 1.75rem;
+    width: 16rem;
+    padding-top: 0.4rem;
+    padding-bottom: 0.4rem;
+    background-color: #EF4444;
+    color: white;
+    font-weight: 500;
+    text-transform: uppercase;
+    border-radius: 0.35rem;
+}
+
+.btn-ham:hover {
+    background-color: #B91C1C;
+    color: #ebebeb;
+    transition: .2s ease-in-out;
+}
+
+.animate {
+    transform: translate(1300%, 0);
+    transition: transform 0.5s ,
+    background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+    opacity 0.55s ease;
+}
+
+
+
+
+/* hr {
+    display: block;
+    unicode-bidi: isolate;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+    margin-inline-start: auto;
+    margin-inline-end: auto;
+    overflow: hidden;
+    border-style: inset;
+    border-width: 1px;
+} */
 
 /* carousel */
 /* .custom-carousel{
@@ -242,7 +317,3 @@ footer p{
     }
     
   }
-
-
-
-
