--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,11 +1,15 @@
 
       
-      <footer>
+      <!--footer>
         <p> 
             &copy; Copyright  WillwerDev
         </p>
-   </footer>
+   </!--footer-->
 
+<!-- my JS -->
+<script src="assets/js/script.js"></script>
+
+<!-- Script bootstrap-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
 crossorigin="anonymous"></script>
@@ -15,7 +19,7 @@ crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
 integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
 crossorigin="anonymous"></script>
-<script src="script.js"></script>
+
 
 </body>
 
