--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        <%= title %>>
+        <%= title %>
     </title>
 
     <!-- font Kanit -->
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
         rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
         crossorigin="anonymous">
+    <!-- tailwind -->
+    <link href="https://unpkg.com/tailwindcss@%5E2/dist/tailwind.min.css" rel="stylesheet" />
 
     <style>
         .table-wrapper {
@@ -41,17 +43,42 @@
 
     
         <!-- navbar -->
-        <nav>
-            <div class="logo-grid">
-                <a href="/"><i class="fas fa-user-astronaut"></i></a>
-                <h3><a href="/">Spaceto</a></h3>
-                <h3><a href="/add" style="margin-left: 1400px ;" class="add-custom">Add</a></h3>
-            </div>
-            <div class="ham-grid">
-                <i class="fas fa-bars"></i>
+  <nav>
+    <div class="logo-grid">
+      <a href="/"><i class="fas fa-user-astronaut"></i></a>
+      <h3><a href="/">Spaceto</a></h3>
+    </div>
+    <div class="ham-grid">
+      <button type="button" onclick="openPopover(event,'popover-id')" onclick="openPopover(event,'popover-id')">
 
-            </div>
+        <i class="fas fa-bars"></i>
 
-        </nav>
+      </button>
+    </div>
+   
+      <div class="animate shadow-xl hidden bg-white border-0 block z-50 leading-normal w-96 text-left no-underline break-words rounded-sm max-w-full" id="popover-id">
+      <div class="center-ham">
+        <i class="fas fa-user-circle profile-icon"></i>
+        <div
+          class="bg-white font-medium p-3 mb-0  uppercase rounded-t-lg text-xl">
+          Name Surname
+        </div>
+        <hr class="lineHr my-0 ">
+        <div class="mt-3 ham-list">
+          <p class="mt-2"><a href="/" ><i style="font-size: 16px; padding-right: 0.4rem;" class="fas fa-home"></i>Home</a></p>
+          <p class="mt-2"><a href="/add" ><i style="font-size: 16px; padding-right: 0.4rem;" class="far fa-calendar-check"></i>Reserved</a></p>
+          <p class="mt-2"><a href="/add" ><i style="font-size: 16px; padding-right: 0.4rem;" class="fas fa-id-card"></i>My Workspace</a></p>
+          <p class="mt-2"><a href="/add" ><i style="font-size: 16px; padding-right: 0.15rem;" class="fas fa-plus-circle"></i>  Add Workspace</a></p>
+          
+        </div>
+        <button class="mt-3 btn-ham">Logout</button>
+
+
+      </div>
+
+      </div>
+  
+
+  </nav>
 
      
